--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
     "@heroicons/react": "^2.0.15",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "@mui/styles": "^5.11.9",
     "@next/font": "13.1.6",
+    "add": "^2.0.6",
+    "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
+    "flowbite": "^1.6.3",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "swr": "^2.0.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
