--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "add": "^2.0.6",
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
+    "cookie-cutter": "^0.2.0",
     "flowbite": "^1.6.3",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
