--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
     "cookie-cutter": "^0.2.0",
+    "faker": "^6.6.6",
     "flowbite": "^1.6.3",
     "moment": "^2.29.4",
     "next": "13.1.6",
